--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 tokio = { version = "1.36.0", features = ["full"] }
 axum = "0.7.4"
 tower = "0.4.13"
+sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
+dotenvy = "0.15.7"
